[gd_scene load_steps=5 format=3 uid="uid://cbglm0ijl0ta6"]

[ext_resource type="PackedScene" uid="uid://dp3conn5ww2sv" path="res://scenes/ui/menu_controllers.tscn" id="1_ta2k2"]
[ext_resource type="Script" uid="uid://bhasoqpegaxo" path="res://scripts/ui/options_menu.gd" id="1_wj2x4"]
[ext_resource type="PackedScene" uid="uid://dwt7hygfhtp84" path="res://scenes/ui/audio_menu.tscn" id="3_c4822"]
[ext_resource type="PackedScene" uid="uid://c0srxhpf1s4h7" path="res://scenes/ui/video_menu.tscn" id="4_0ejsc"]

[node name="OptionsMenu" type="Node2D"]
process_mode = 3
script = ExtResource("1_wj2x4")

[node name="Options" parent="." instance=ExtResource("1_ta2k2")]
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Label" parent="Options" index="1"]
text = "OPCIONES"

[node name="Button0" parent="Options/Buttons" index="0"]
text = "AUDIO"

[node name="Button1" parent="Options/Buttons" index="1"]
text = "VIDEO"

[node name="Button2" parent="Options/Buttons" index="2"]
text = "VOLVER"

[node name="Audio" parent="." instance=ExtResource("3_c4822")]
visible = false

[node name="Video" parent="." instance=ExtResource("4_0ejsc")]
visible = false

[connection signal="pressed" from="Options/Buttons/Button0" to="." method="_on_option_button_0_pressed"]
[connection signal="pressed" from="Options/Buttons/Button1" to="." method="_on_option_button_1_pressed"]
[connection signal="pressed" from="Video/MenuControllers/Buttons/Button2" to="." method="_on_video_button_2_pressed"]

[editable path="Options"]
[editable path="Audio"]
[editable path="Video"]
[editable path="Video/MenuControllers"]
